--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <img id="banner" src="colocar a img">
+    <img id="banner" src="download.jpe">
     <div class="principal">
     <p> Oque são? </p>
 e    <p>Os jogos virtuais são aqueles jogados em meios artificiais eletrônicos.
      Neles, é necessário o suporte de aparelhos eletrônicos, como controls e monitores,
-      para que os jogadores interajam com as peças, os oponentes e os desafios</p>
+      para que os jogadores interajam com as peças, os oponentes e os desafios
+      Os jogos eletrônicos possuem grande influência em meio a sociedade atual, já que 
+      são considerados uma forma de “fuga social”, dessa forma, os mesmos possuem uma 
+      influência enorme para com as pessoas, sendo essa influência tanto positiva, como 
+      função de aprendizado e desenvolvimento de estímulos cognitivos,  como negativa 
+      omo vícios e problemas de saúde como sedentarismo, cansaço físico e mental.  
+
+    </p>
       
 
 </div>
