--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title> Os jogos virtuais </title>
     <meta charset="utf-8">
   </head>
-  <body>
-    <img id="banner" src="download.jpe">
+  <body>s4r
+    <img id="banner" src="fortnite_capitulo_2_novas_armas_corpo_texto_02.jpg">
     <div class="principal">
-    <p> Oque são? </p>
+    <p> Jogos virtuais </p>
 e    <p>Os jogos virtuais são aqueles jogados em meios artificiais eletrônicos.
      Neles, é necessário o suporte de aparelhos eletrônicos, como controls e monitores,
       para que os jogadores interajam com as peças, os oponentes e os desafios
