--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <title> Os jogos virtuais </title>
-    <meta charset="utf-8">
-  </head>
-  <body>s4r
-    <img id="banner" src="fortnite_capitulo_2_novas_armas_corpo_texto_02.jpg">
-    <div class="principal">
-    <p> Jogos virtuais </p>
-e    <p>Os jogos virtuais são aqueles jogados em meios artificiais eletrônicos.
-     Neles, é necessário o suporte de aparelhos eletrônicos, como controls e monitores,
-      para que os jogadores interajam com as peças, os oponentes e os desafios
-      Os jogos eletrônicos possuem grande influência em meio a sociedade atual, já que 
-      são considerados uma forma de “fuga social”, dessa forma, os mesmos possuem uma 
-      influência enorme para com as pessoas, sendo essa influência tanto positiva, como 
-      função de aprendizado e desenvolvimento de estímulos cognitivos,  como negativa 
-      omo vícios e problemas de saúde como sedentarismo, cansaço físico e mental.  
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de Jogos Virtuais</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    </p>
-      
+    <header>
+        <h1>Página de Jogos Virtuais</h1>
+    </header>
 
-</div>
+    <section>
+        <h2>Sobre Nós</h2>
+        <p>Bem-vindo à nossa página dedicada aos jogos virtuais. Aqui, exploramos o emocionante mundo dos jogos eletrônicos, desde os clássicos até os mais recentes lançamentos.</p>
+
+        <h2>Últimas Notícias</h2>
+        <p>Fique atualizado com as últimas notícias e novidades sobre jogos virtuais. Explore resenhas, análises e dicas para aprimorar sua experiência de jogo.</p>
+
+        <h2>Top Jogos do Momento</h2>
+        <p>Descubra os jogos mais populares e emocionantes que estão dominando o cenário atual. Envolva-se com histórias cativantes, gráficos impressionantes e mecânicas de jogo inovadoras.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Página de Jogos Virtuais. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
+</html>
