--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
 
     <header>
-        <h1>Página de Jogos Virtuais</h1>
+        <h1>Página de <span class="destaque">Jogos Virtuais</span></h1>
     </header>
 
     <section>
-        <h2>Sobre Nós</h2>
-        <p>Bem-vindo à nossa página dedicada aos jogos virtuais. Aqui, exploramos o emocionante mundo dos jogos eletrônicos, desde os clássicos até os mais recentes lançamentos.</p>
+        <h2><span class="destaque">Sobre Nós</span></h2>
+        <p>Bem-vindo à nossa emocionante jornada pelo universo dos <span class="negrito">jogos virtuais</span>! Aqui, mergulhamos no fascinante mundo dos games, explorando desde os <span class="itálico">clássicos atemporais</span> até os mais recentes e inovadores lançamentos.</p>
 
-        <h2>Últimas Notícias</h2>
-        <p>Fique atualizado com as últimas notícias e novidades sobre jogos virtuais. Explore resenhas, análises e dicas para aprimorar sua experiência de jogo.</p>
+        <h2><span class="destaque">Últimas Notícias</span></h2>
+        <p>Fique por dentro das últimas novidades do cenário de <span class="negrito">jogos virtuais</span>. Nossa equipe de especialistas traz análises aprofundadas, notícias quentes e dicas valiosas para aprimorar sua experiência <span class="itálico">gamer</span>.</p>
 
-        <h2>Top Jogos do Momento</h2>
-        <p>Descubra os jogos mais populares e emocionantes que estão dominando o cenário atual. Envolva-se com histórias cativantes, gráficos impressionantes e mecânicas de jogo inovadoras.</p>
+        <h2><span class="destaque">Top Jogos do Momento</span></h2>
+        <p>Descubra os jogos que estão dominando o momento. Seja você um fã de <span class="negrito">ação</span>, <span class="negrito">aventura</span>, <span class="negrito">estratégia</span> ou <span class="negrito">simulação</span>, nossa seleção dos melhores <span class="jogos">jogos</span> proporcionará horas de diversão ininterrupta. Explore histórias envolventes, gráficos impressionantes e mecânicas de jogo <span class="itálico">inovadoras</span>.</p>
     </section>
 
     <footer>
