--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     </header>
 
     <section>
-        <h2><span class="destaque">Sobre Nós</span></h2>
-        <p>Bem-vindo à nossa emocionante jornada pelo universo dos <span class="negrito">jogos virtuais</span>! Aqui, mergulhamos no fascinante mundo dos games, explorando desde os <span class="itálico">clássicos atemporais</span> até os mais recentes e inovadores lançamentos.</p>
+        <h2><span class="destaque">Jogos virtuais</span></h2>
+        <p>Os jogos virtuais representam uma parte fundamental da cultura contemporânea, oferecendo experiências imersivas e oportunidades de entretenimento diversificado.
+             Essa forma de entretenimento evoluiu de simples passatempos para expressões artísticas complexas, desafiando a realidade ao transportar os jogadores para
+              mundos imaginários. Além do aspecto lúdico, os jogos contribuem para o desenvolvimento cognitivo e social, promovendo habilidades estratégicas e interações
+               sociais. A indústria de jogos cresce constantemente, abrangendo diversos gêneros e incorporando tecnologias como a realidade virtual. No entanto, é crucial
+                equilibrar o tempo dedicado aos jogos para garantir uma vida saudável e produtiva. Em resumo, os jogos virtuais oferecem experiências envolventes, mas é 
+                essencial abordá-los com discernimento para aproveitar seus benefícios de forma equilibrada. <span class="negrito">jogos virtuais</span>! Aqui, mergulhamos
+                 no fascinante mundo dos games, explorando desde os <span class="itálico">clássicos atemporais</span> até os mais recentes e inovadores lançamentos.</p>
 
         <h2><span class="destaque">Últimas Notícias</span></h2>
         <p>Fique por dentro das últimas novidades do cenário de <span class="negrito">jogos virtuais</span>. Nossa equipe de especialistas traz análises aprofundadas, notícias quentes e dicas valiosas para aprimorar sua experiência <span class="itálico">gamer</span>.</p>
