--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <p>Contudo, é importante considerar os impactos dos jogos virtuais na vida quotidiana. O equilíbrio entre o tempo dedicado aos jogos e outras atividades é crucial para manter uma vida saudável e produtiva. A conscientização sobre a importância do tempo offline, a moderação no uso de jogos e a escolha de conteúdos apropriados são aspectos essenciais para garantir uma experiência positiva.</p>
 
   <p>Em síntese, os <strong>jogos virtuais</strong> são mais do que simples formas de entretenimento; são plataformas que transcendem os limites da realidade, proporcionando experiências envolventes, desafios intelectuais e oportunidades de interação social. Enquanto a indústria continua a inovar, é vital que os jogadores abordem essa forma de entretenimento com discernimento, aproveitando os benefícios sem comprometer outros aspectos importantes de suas vidas.</p>
-
+  <section>
+    <img src="download.jpeg" alt="Descrição da Imagem 1">
+    <p>Texto relacionado à primeira imagem.</p>
+  </section>
 </body>
 </html>
