--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   <p>Os <strong>jogos virtuais</strong> têm se tornado uma parte fundamental da cultura contemporânea, proporcionando experiências imersivas e oportunidades de entretenimento sem precedentes. Com o avanço da tecnologia, os jogos evoluíram de simples passatempos para formas complexas de expressão artística, narrativa e interação social.</p>
 
   <p>Uma característica marcante dos jogos virtuais é a capacidade de transportar os jogadores para mundos imaginários, oferecendo escapismo e permitindo que vivenciem aventuras impossíveis na vida real. Seja explorando terras mágicas, participando de batalhas épicas ou desbravando universos futuristas, os jogos proporcionam uma variedade de experiências que desafiam a realidade.</p>
-
+  <img src="download.jpeg" alt="Descrição da Imagem 1">
+</section>
   <p>Além do aspecto lúdico, os jogos virtuais também desempenham um papel significativo no desenvolvimento cognitivo e social. Muitos jogos exigem habilidades estratégicas, resolução de problemas e tomada de decisões rápidas, contribuindo para o aprimoramento das capacidades mentais dos jogadores. Além disso, a natureza colaborativa de muitos jogos online promove a interação social e a construção de comunidades virtuais, conectando jogadores de todo o mundo.</p>
 
   <p>A indústria de jogos virtuais tem crescido exponencialmente, abraçando uma variedade de gêneros que atendem a públicos diversos. Desde os jogos de ação frenética até os jogos de simulação mais contemplativos, há algo para todos os gostos. Além disso, a realidade virtual (VR) e a realidade aumentada (AR) têm elevado a experiência dos jogos a um novo patamar, mergulhando os jogadores em ambientes tridimensionais e interativos.</p>
 
   <p>Contudo, é importante considerar os impactos dos jogos virtuais na vida quotidiana. O equilíbrio entre o tempo dedicado aos jogos e outras atividades é crucial para manter uma vida saudável e produtiva. A conscientização sobre a importância do tempo offline, a moderação no uso de jogos e a escolha de conteúdos apropriados são aspectos essenciais para garantir uma experiência positiva.</p>
-
+  <img src="fortnite_capitulo_2_novas_armas_corpo_texto_02.jpg" alt="Descrição da Imagem 1">
+</section>
   <p>Em síntese, os <strong>jogos virtuais</strong> são mais do que simples formas de entretenimento; são plataformas que transcendem os limites da realidade, proporcionando experiências envolventes, desafios intelectuais e oportunidades de interação social. Enquanto a indústria continua a inovar, é vital que os jogadores abordem essa forma de entretenimento com discernimento, aproveitando os benefícios sem comprometer outros aspectos importantes de suas vidas.</p>
   <section>
     <img src="download.jpeg" alt="Descrição da Imagem 1">
-    <p>Texto relacionado à primeira imagem.</p>
   </section>
 </body>
 </html>
